@@ -1,3 +1,8 @@
+  * pbltest now accept pdata.frame objects
+  * cortab included as a function in plm
+
+
+
 Changes in version 1.6-6
 
   * ercomp: re-written to be a more general framework.
